# estudos-fast-api

aula01/: pyproject.toml
aula01/src/aula01/: app.py  schemas.py
aula01/tests/: conftest.py  test_app.py
pre-requisitos/funcoes/: function2.py  functon.py  procedure.py
pre-requisitos/poo/: exemplo.py  fila.py
